# DiningPhilosophers

./: CMakeLists.txt  README.md  TODO.txt
code/: main.cpp
code/headers/: Philosopher.h
code/tests/: PhilosopherTest.h  gtest.cpp
headers/: Philosopher.h
source/: main.cpp
